# trans

./: README.md  main.py  pyproject.toml  remove_retries.py  remove_retries2.py  remove_retries3.py
tests/: test_sdk.py
trans/: __init__.py  api_client.py  auth_client.py  config.py  dtos.py  exceptions.py  observability.py
trans_client/: dtos.py
